Fixed styling issue - container div too small

--- a/lab_9/public/styles.css
+++ b/lab_9/public/styles.css
@@ -74,7 +74,7 @@ h3 {
   padding: 10px;
   overflow-wrap: break-word;
   margin: 25px 50px;
-  max-width: 450px;
+  width:600px;
 }
 
 .button {
